Fixed some of the wrapping issues cause I learned more about bootstrap

--- a/S-01_Market_Share/microservice/public/bootstrap/starter-template.css
+++ b/S-01_Market_Share/microservice/public/bootstrap/starter-template.css
@@ -18,7 +18,6 @@ h3, h5 {
 
 .row {
   margin-bottom: 1rem;
-  margin-right: -7rem;
   max-width: 600px;
   display: none;
 }
