--- a/registry/registry/public/bootstrap/starter-template.css
+++ b/registry/registry/public/bootstrap/starter-template.css
@@ -34,8 +34,3 @@ hr {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-
-.search {
-  align-self: flex-end;
-  padding-bottom: 0.5rem;
-}
